Updated Ansible Playbook file V3

--- a/conf/ProvisionTestServerV1.yml
+++ b/conf/ProvisionTestServerV1.yml
@@ -6,7 +6,6 @@
     tasks:
 
       - name: Download the Website code from GitRepo
-        become: yes
         git:
           repo: 'https://github.com/jeffreydotbaker/DevOpsCertProj.git'
           dest: "{{ destdir }}"
@@ -14,12 +13,12 @@
       - name: Change the working directory to git repo home dir, shut down running containers
         shell: docker-compose stop
         args:
-          chdir: "{{ destdir }}"
+          chdir: "{{ destdir }}/conf"
       - name: Change the working directory to git repo home dir, destroy container images
         shell: docker-compose down
         args:
-          chdir: "{{ destdir }}"
+          chdir: "{{ destdir }}/conf"
       - name: Change the working directory to git repo home dir, rebuild images and spin up containers
         shell: docker-compose up -d --build
         args:
-          chdir: "{{ destdir }}"    
+          chdir: "{{ destdir }}/conf"    
