Updated Docker Compose file V3

--- a/conf/docker-compose.yml
+++ b/conf/docker-compose.yml
@@ -6,4 +6,4 @@ services:
         ports:
             - 8888:80
         volumes:
-            - "./website:/var/www/html"
+            - "../website:/var/www/html"
